# pesa-playground

./: .gitignore  .gitmodules  .release-please-manifest.json  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TESTING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json
.github/workflows/: build-docker.yml  build-tauri-linux.yml  build-tauri-windows.yml  github-releases-to-discord.yml  lint.yml  prepare-release.sh  release-please.yml  semantic-release.yml
crates/: README.md
crates/pesa-axum/: Cargo.toml
crates/pesa-axum/src/: main.rs
crates/pesa-core/: Cargo.toml
crates/pesa-core/src/: db.rs  events.rs  info.rs  lib.rs  user.rs
crates/pesa-core/src/accounts/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/accounts/mmf_accounts/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/accounts/paybill_accounts/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/accounts/till_accounts/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/accounts/user_profiles/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/accounts/utility_accounts/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/api_keys/: db.rs  mod.rs
crates/pesa-core/src/api_logs/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/business/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/business_operators/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/callbacks/: db.rs  dispatch.rs  mod.rs  orchestrator.rs  response.rs
crates/pesa-core/src/callbacks/stk/: init.rs  mod.rs  process.rs  ui.rs
crates/pesa-core/src/migrations/: m20251227_183827_initial_schema.rs  m20251228_082822_apply_schema_changes.rs  mod.rs
crates/pesa-core/src/projects/: db.rs  ui.rs
crates/pesa-core/src/sandboxes/: mod.rs  ui.rs
crates/pesa-core/src/self_test/: api_client.rs  callback.rs  context.rs  emitter.rs  events.rs  macros.rs  mod.rs  runner.rs  ui.rs
crates/pesa-core/src/self_test/tests/: b2c.rs  balance_query.rs  c2b.rs  create_project.rs  mod.rs  send_money.rs  stkpush.rs
crates/pesa-core/src/server/: async_handler.rs  log.rs  mod.rs
crates/pesa-core/src/server/access_token/: db.rs
crates/pesa-core/src/server/api/: auth.rs  c2b.rs  mod.rs  stkpush.rs
crates/pesa-core/src/server/api/b2c/: mod.rs  task.rs
crates/pesa-core/src/server/api/balance_query/: mod.rs  task.rs
crates/pesa-core/src/server/api/c2b/: mod.rs  register.rs
crates/pesa-core/src/server/api/stkpush/: mod.rs  task.rs  ui.rs
crates/pesa-core/src/settings/: mod.rs  models.rs  ui.rs
crates/pesa-core/src/system/: ui.rs
crates/pesa-core/src/transaction_costs/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/transactions/: db.rs  mod.rs  ui.rs
crates/pesa-core/src/transactions_log/: db.rs  mod.rs  ui.rs
crates/pesa-lua/: Cargo.toml
crates/pesa-lua/src/: lib.rs  main.rs  manager.rs  types.rs
crates/pesa-macros/: Cargo.toml
crates/pesa-macros/src/: lib.rs
crates/pesa-ratatui/: Cargo.toml
crates/pesa-tauri/: Cargo.toml  tauri.conf.json
crates/pesa-tauri/capabilities/: default.json
crates/pesa-tauri/icons/: icon.icns
crates/pesa-tauri/src/: lib.rs
crates/pesa-tauri/tests/: c2b_api.rs  c2b_lipa_test.rs
crates/pesa-tauri/tests/common/: mod.rs
docker/: Dockerfile
scripts/: semantic-release.cjs  semantic-release.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_keys.rs  api_logs.rs  callbacks.rs  db.rs  events.rs  lib.rs  main.rs  project.rs  transaction.rs  user.rs
src-tauri/src/accounts/: db.rs  mod.rs  ui.rs
src-tauri/src/accounts/paybill_accounts/: db.rs  mod.rs  ui.rs
src-tauri/src/accounts/till_accounts/: db.rs  mod.rs  ui.rs
src-tauri/src/accounts/user_profiles/: mod.rs  ui.rs
src-tauri/src/api_keys/: db.rs
src-tauri/src/api_logs/: db.rs  mod.rs  ui.rs
src-tauri/src/business/: mod.rs  ui.rs
src-tauri/src/callbacks/: mod.rs  response.rs
src-tauri/src/callbacks/stk/: init.rs  mod.rs  process.rs  ui.rs
src-tauri/src/projects/: mod.rs  ui.rs
src-tauri/src/server/: log.rs  mod.rs
src-tauri/src/server/access_token/: mod.rs
src-tauri/src/server/api/: auth.rs  c2b.rs  mod.rs  stkpush.rs
src-tauri/src/transaction_costs/: mod.rs  ui.rs
src-tauri/src/transactions/: db.rs  mod.rs  ui.rs
src-tauri/src/transactions_log/: db.rs  mod.rs  ui.rs
src-tauri/tests/: c2b_api.rs  c2b_lipa_test.rs  factories.rs
src-tauri/tests/common/: mod.rs
src/lib/: api.ts  errorhelp.ts  utils.ts
src/lib/components/: AppSidebar.svelte  LogSheet.svelte  SandboxToggle.svelte  StkPushDialog.svelte
src/lib/components/businesses/: PaybillAccounts.svelte  Projects.svelte  TillAccounts.svelte
src/lib/components/settings/: TransactionCostsTab.svelte
src/lib/components/users/: SimToolkit.svelte  TransactionList.svelte  UserDetails.svelte  UserEmptyState.svelte  UserList.svelte
src/lib/stores/: sandboxStatus.ts  title.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/businesses/: +layout.svelte  +page.svelte
src/routes/users/: +layout.svelte  +page.svelte
web/: .prettierignore  .prettierrc  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
web/src/: app.css  app.html
web/src/lib/: api.ts  errorhelp.ts  keymap.ts  lsp-transport.ts  schema.ts  scripts.ts  utils.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web/static/: splashscreen.html
(+92 files in other folders)
