[package]
name = "pesa-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
log = "0.4"
env_logger = "0.10"
pesa-core = { path = "../pesa-core" }
pesa-macros = { path = "../pesa-macros" }
futures-util = "0.3.31"
dirs = "5.0"
bytes = "1.0"
