[package]
name = "pesa-axum"
version = "0.1.0"
edition = "2021"
authors = ["omenta"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
log = "0.4"
env_logger = "0.10"
pesa-core = { path = "../pesa-core" }
pesa-macros = { path = "../pesa-macros" }
pesa-lua = { path = "../pesa-lua" }
futures-util = "0.3.31"
dirs = "5.0"
bytes = "1.0"
pesa-lsp = { version = "0.1.0", path = "../pesa-lsp" }
tracing = "0.1.43"
