[package]
name = "pesa-core"
version.workspace = true
edition.workspace = true
authors = ["omenta"]

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.4"
fake = "4.3.0"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
anyhow = "1.0.98"
nanoid = "0.4.0"
sea-query = { version = "0.32.6", features = ["backend-sqlite"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.45.1", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["json"] }
once_cell = "1.21.3"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
tower = "0.5.2"
rsa = "0.9.9"
rand = "0.8.5"
tracing = "0.1.44"
dashmap = "6.1.0"
sea-orm-migration = "1.1.19"

